chore: add spacing 0.125 alias

--- a/app/themes.css
+++ b/app/themes.css
@@ -20,6 +20,7 @@
   --space-12: var(--space12);
   --space-16: var(--space16);
 
+  --spacing-0-125: var(--spacing0125);
   --spacing-0-25: var(--spacing025);
   --spacing-0-5: var(--spacing05);
   --spacing-0-75: var(--spacing075);
