--- a/tokens/tokens.css
+++ b/tokens/tokens.css
@@ -67,6 +67,13 @@
   --space16: calc(var(--space-8) * 2);
   --ring-size1: var(--spacing-0-5);
   --ring-size2: var(--spacing-1);
+  --icon-size: var(--icon-size-md);
+  --icon-size-xs: 14px;
+  --icon-size-sm: 16px;
+  --icon-size-md: 18px;
+  --icon-size-lg: 24px;
+  --icon-size-xl: 32px;
+  --icon-size-2xl: 76px;
   --icon-stroke100: var(--spacing-0-5);
   --icon-stroke150: calc(var(--spacing-0-5) * 1.25);
   --ring-diameter-xs: var(--space-5);
